<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#f5f5f5">

    <androidx.cardview.widget.CardView
        android:id="@+id/login_container"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#FFFFFF"
        android:padding="50dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/oval_edit_text"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/oval_edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textSize="18sp" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="#6200EE"
                android:text="@string/login_register"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
